force-app/main/default/objects/Language_Config__c/Language_Config__c.object-meta.xml
<CustomObject>
    <label>Language Config</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Language Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Language Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>