force-app/main/default/objects/Language_Config__c/fields/Communication_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Communication_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Communication Configuration</description>
    <label>Communication Configuration</label>
    <referenceTo>Communication_Configuration__c</referenceTo>
    <relationshipLabel>Language Configs</relationshipLabel>
    <relationshipName>Language_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>