force-app/main/default/objects/Language_Config__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>Email template name to send emails</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>