force-app/main/default/objects/Language_Config__c/fields/Language_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Language_Qualifier__c</fullName>
    <description>API name of field to check on Roles for qualification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Language_Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>