force-app/main/default/objects/Language_Config__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Template</label>
    <referenceTo>SMS_Template__c</referenceTo>
    <relationshipLabel>Language Configs</relationshipLabel>
    <relationshipName>Language_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>