force-app/main/default/objects/Language_Config__c/fields/SMS_Template_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SMS Template External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>